Prevent DT truncation

--- a/client/src/JobCard.module.css
+++ b/client/src/JobCard.module.css
@@ -5,7 +5,7 @@
 }
 .MetadataEntryDT {
     float: left;
-    width: 6.5em;
+    width: 8em;
     margin-right: 0.5em;
 }
 .MetadataEntryDD {
